<resources>
     <string name="hello_world">Hello Dowellmarket</string>
     <string name="about_me_title">Un mot sur moi</string>
    <string name="accept">"J'accepte les"</string>
    <string name="address_header_title">ADRESSE</string>
    <string name="address_line1_title">Adresse</string>
    <string name="address_line2_title">Adresse (suite)</string>
    <string name="address_to_rent">Adresse où je veux louer…</string>
    <string name="age_min_license_min">%1$s ans et %2$s ans de permis</string>
    <string name="album_name">Drivy</string>
    <string name="almost_all_the_time">Quasi tout le temps</string>
    <string name="and">et</string>
    <string name="app_name">Dowellmarket</string>
    <string name="are_you_sure">Êtes-vous sûr ?</string>
    <string name="are_you_sure_car_new">Êtes-vous sûr de ne pas vouloir inscrire votre voiture ?</string>
    <string name="are_you_sure_filters">Êtes-vous sûr de reinitialiser les paramètres ?</string>
    <string name="are_you_sure_sign_up">Êtes-vous sûr de ne pas vouloir vous inscrire ?</string>
    <string name="as_driver">En tant que locataire</string>
    <string name="attention">Attention</string>
    <string name="auth_client_needs_enabling_title">An application requires Google Play Services to be enabled.</string>
    <string name="auth_client_needs_installation_title">An application requires installation of Google Play Services.</string>
    <string name="auth_client_needs_update_title">An application requires an update for Google Play Services.</string>
    <string name="auth_client_play_services_err_notification_msg">Google Play services error</string>
    <string name="auth_client_requested_by_msg">Requested by %1$s</string>
    <string name="auth_client_using_bad_version_title">An application attempted to use a bad version of Google Play Services.</string>
    <string name="availabilities">Disponibilités</string>
    <string name="availability_booked">(Réservée)</string>
    <string name="availability_unavailable">(Indisponible)</string>
    <string name="available">"La voiture est disponible du %1$s %2$s au %3$s %4$s. Pour d'autres disponibilités, veuillez sélectionner d'autres dates depuis l'écran de recherche."</string>
    <string name="available_case">"La voiture est disponible sur demande du %1$s %2$s au %3$s %4$s. Pour d'autres disponibilités, veuillez sélectionner d'autres dates depuis l'écran de recherche."</string>
    <string name="available_within">dispo. dans un rayon de %1$s</string>
    <string name="back_to_search">Retour à la recherche</string>
    <string name="bad_time_title">Heure dérangeante</string>
    <string name="before_contacting">Avant de contacter le propriétaire…</string>
    <string name="birth_place_title">Lieu de naissance</string>
    <string name="birthdate_title">Date de naissance</string>
    <string name="book_this_car">Réserver cette voiture</string>
    <string name="booking_ok">Votre réservation a bien été prise en compte !</string>
    <string name="brand">Marque</string>
    <string name="calendar_icon">Calendrier</string>
    <string name="call">Contacter</string>
    <string name="cancel">Annuler</string>
    <string name="cancel_call">Annuler</string>
    <string name="car_already_booked">"La voiture est déjà réservée pour ces dates.Veuillez choisir d'autres dates ou une autre voiture."</string>
    <string name="car_available">La voiture est disponible</string>
    <string name="car_available_on_demand">La voiture est disponible sur demande</string>
    <string name="car_is_not_available">"Le propriétaire a indiqué que sa voiture n'était pas disponible pour ces dates. Voulez-vous tout de même réserver la voiture pour ces dates ?"</string>
    <string name="car_loading">"Chargement de l'annonce…"</string>
    <string name="car_new_brand">Marque</string>
    <string name="car_new_model">Modéle</string>
    <string name="car_new_model_example">Clio III Campus dCi</string>
    <string name="car_new_model_example_25">ex : Twingo année 2007, Clio année 2004</string>
    <string name="car_new_sending_photo_message">Vous avez un envoi en cours. Voulez-vous quand même soumettre votre annonce sans cette photo ?</string>
    <string name="car_new_sending_photo_title">Envoi de photo en cours</string>
    <string name="car_new_success">Terminer</string>
    <string name="car_new_success_text">Complétez et activez votre annonce en cliquant sur le lien que nous vous avons envoyé par email ou rendez-vous sur drivy.com.</string>
    <string name="car_new_success_title">Vous y êtes presque !</string>
    <string name="car_new_title">Proposer ma voiture</string>
    <string name="car_new_title_daily_price">PRIX MOYEN PAR JOUR</string>
    <string name="car_new_title_photos">PHOTOS (facultatif)</string>
    <string name="car_new_title_vehicle">VÉHICULE</string>
    <string name="car_new_tour">Tour</string>
    <string name="car_not_available">Voiture non disponible.</string>
    <string name="card_holder">Nom du porteur</string>
    <string name="card_holder_empty">Veuillez inscrire le nom du porteur de la carte</string>
    <string name="cars_loading">Chargement des annonces …</string>
    <string name="cdw_title">Réduction de franchise</string>
    <string name="cgu_title">Conditions générales de vente</string>
    <string name="city_title">Ville</string>
    <string name="com.c4mprod.voiturelib.CarNewActivity">/car/post</string>
    <string name="com.c4mprod.voiturelib.CarNewSuccessActivity">/car/post/success</string>
    <string name="com.c4mprod.voiturelib.CarShowActivity">/car</string>
    <string name="com.c4mprod.voiturelib.ConfirmationActivity">/car/booking/success</string>
    <string name="com.c4mprod.voiturelib.FiltersActivity">/search</string>
    <string name="com.c4mprod.voiturelib.HomeActivity">/start</string>
    <string name="com.c4mprod.voiturelib.MessageActivity">/car/contact</string>
    <string name="com.c4mprod.voiturelib.PaymentActivity">/car/booking/step2</string>
    <string name="com.c4mprod.voiturelib.RentCarActivity">/car/booking/step1</string>
    <string name="com.c4mprod.voiturelib.SignUpActivity">/signup</string>
    <string name="com_facebook_choose_friends">Choisi tes amis</string>
    <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_loading">Chargement…</string>
    <string name="com_facebook_loginfragment_log_in_button">Se connecter…</string>
    <string name="com_facebook_loginfragment_logged_in">Se connecter</string>
    <string name="com_facebook_loginfragment_not_logged_in">Non connecter</string>
    <string name="com_facebook_loginview_cancel_action">Annuler</string>
    <string name="com_facebook_loginview_log_in_button">Se connecter</string>
    <string name="com_facebook_loginview_log_out_action">Se deconnecter</string>
    <string name="com_facebook_loginview_log_out_button">Se déconnecter</string>
    <string name="com_facebook_loginview_logged_in_as">Connecter en tant que : %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Se connecter via Facebook</string>
    <string name="com_facebook_logo_content_description">Logo Facebook</string>
    <string name="com_facebook_nearby">A proximité</string>
    <string name="com_facebook_picker_done_button_text">Fini</string>
    <string name="com_facebook_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="com_facebook_placepicker_subtitle_format">%1$s • %2$,d étaient ici</string>
    <string name="com_facebook_placepicker_subtitle_were_here_only_format">%1$,d étaient ici</string>
    <string name="com_facebook_requesterror_password_changed">Your Facebook password has changed. Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_permissions">This app doesn’t have permission to do this. To change permissions, try logging into the app again.</string>
    <string name="com_facebook_requesterror_reconnect">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_relogin">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_web_login">Your Facebook account is locked. Please log into www.facebook.com to continue.</string>
    <string name="com_facebook_usersettingsfragment_log_in_button">Log In…</string>
    <string name="com_facebook_usersettingsfragment_logged_in">Logged In</string>
    <string name="com_facebook_usersettingsfragment_not_logged_in">Not Logged In</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="conditions">Conditions</string>
    <string name="confirm_call">Contacter</string>
    <string name="congrats">Félicitation !</string>
    <string name="connected">Vous êtes connecté.</string>
    <string name="contact_owner">1. Contacter le propriétaire</string>
    <string name="country_title">Pays</string>
    <string name="cryptogram">Crypto.</string>
    <string name="cryptogram_incorrect">Le cryptogramme est incorrect</string>
    <string name="dates">Dates</string>
    <string name="define">Définir</string>
    <string name="description">Description</string>
    <string name="disconnect_message">Etes-vous sûr de vouloir vous déconnecter ?</string>
    <string name="dispo">Pour voir les disponibilités, indiquez vos dates de location depuis la page de recherche</string>
    <string name="distance_default">200km</string>
    <string name="doors_title">Nombre de portes</string>
    <string name="edit">Modifier</string>
    <string name="edit_my_profile">Compléter mon profil</string>
    <string name="email_title">Email</string>
    <string name="empty_fields">Champs vides</string>
    <string name="empty_value">-</string>
    <string name="placeholder_market_name">Titre de l\'annonce</string>
    <string name="placeholder_city">(Ville)</string>
    <string name="placeholder_none">none</string>
    <string name="placeholder_price">price €</string>
    <string name="placeholder_market_guid">(guid)</string>
</resources>