<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/vl_grey_light" >

    <RelativeLayout
        android:id="@+id/market_cell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12.0dip" >

        <RelativeLayout
            android:id="@+id/photo_layout"
            android:layout_width="60.0dip"
            android:layout_height="60.0dip"
            android:layout_gravity="center"
            android:layout_marginRight="5.5dip"
            android:background="@color/vl_grey_light" >

            <ImageView
                android:id="@+id/photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/no_picture_market"
                android:contentDescription="@string/placeholder_none"
                android:maxHeight="60.0dip"
                android:maxWidth="60.0dip"
                android:scaleType="centerCrop" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/description_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="false"
            android:layout_alignWithParentIfMissing="false"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/photo_layout"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/line_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1.5dip"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2.0dip"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/placeholder_market_name"
                    android:textColor="@color/secondary"
                    android:textSize="14.0sp" />

                <TextView
                    android:id="@+id/guid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/name"
                    android:layout_marginLeft="7.0dip"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/placeholder_market_guid"
                    android:textColor="@color/secondary"
                    android:textSize="14.0sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/line_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/line_1"
                android:layout_marginTop="1.5dip"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:maxLines="1"
                    android:text="@string/placeholder_city"
                    android:textColor="@color/tertiary"
                    android:textSize="12.0sp" />

                <ImageView
                    android:id="@+id/call"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="7.0dip"
                    android:layout_toRightOf="@id/city"
                    android:background="@drawable/ic_phone_small_dark"
                    android:contentDescription="@string/placeholder_none" />
            </RelativeLayout>

<!--             <RelativeLayout -->
<!--                 android:id="@+id/ratings_layout" -->
<!--                 android:layout_width="wrap_content" -->
<!--                 android:layout_height="wrap_content" -->
<!--                 android:layout_below="@id/line_2" -->
<!--                 android:layout_marginLeft="4.0dip" -->
<!--                 android:layout_marginTop="1.5dip" -->
<!--                 android:orientation="horizontal" > -->

<!--                 <ImageView -->
<!--                     android:id="@+id/ratings_stars" -->
<!--                     android:layout_width="wrap_content" -->
<!--                     android:layout_height="wrap_content" -->
<!--                     android:contentDescription="@string/placeholder_none" -->
<!--                     android:src="@drawable/star" /> -->

<!--                 <TextView -->
<!--                     android:id="@+id/ratings_count" -->
<!--                     android:layout_width="wrap_content" -->
<!--                     android:layout_height="wrap_content" -->
<!--                     android:layout_centerVertical="true" -->
<!--                     android:layout_marginLeft="7.0dip" -->
<!--                     android:layout_toRightOf="@id/ratings_stars" -->
<!--                     android:maxLines="1" -->
<!--                     android:text="@string/placeholder_count" -->
<!--                     android:textColor="@color/tertiary" -->
<!--                     android:textSize="12.0sp" /> -->
<!--             </RelativeLayout> -->
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/right_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/placeholder_price"
                android:textColor="@color/vl_pink"
                android:textSize="14.0sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </RelativeLayout>

    <View
        android:id="@+id/mask"
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_alignBottom="@id/market_cell"
        android:layout_alignTop="@id/market_cell"
        android:background="#cceaeaea"
        android:visibility="gone" />

</RelativeLayout>